C+W now closes internal frame windows.

if you have multiple folder windows opeening on startup, only the first
one is selected by default now, so that you don't have your keyboard focus
changing on you.

you can now subscribe to multiple folders at once.

middle clicking folder and message internalframes now deselects them
and moves them to the back.

added a new icon set, and added in an IconManager to allow for changeable
icon sets.

fixed a bug with subscribing to subfolders of stores where the subfolder 
would get the subscription, but the sub-subfolder wouldn't.

carriage returns in subjects are now replaced with spaces.

051031 release
--------------

fixed a bug where the 3rd field was always opening an attachment menu even
if there were no attachments.

fixed save as draft so it actually works now.

cleaned up the save as draft/resume draft ui a bit.

login authenticator now has password field selected by default.

fixed a bug where pooka would take a long time to startup when the loopback
address wasn't available.

addresses added from the address book are now added as email addresses 
rather than aliases.

status messages now disappear after 30 seconds.

synchronized the MailFileSystemView access so its access shouldn't conflict
with any normal Pooka operations.

default server not having an outbox should no longer throw a NPE.

closing a disconnected imap store no longer results in 'please reopen' 
messages.

made status area at bottom smaller.

added a system tray icon for Pooka (currenly disabled by default; still
experimental).

050505 release
--------------

added -open and --from options to startup.  this allows you to invoke Pooka 
to only send a new message, rather than starting up the entire client.

added a network listener so that, by default, if you try to start up two
Pooka clients from the same Pookarc you instead will just bring the first
one to the foreground.  this also allows an external invocation to contact