@@ -346,6 +346,9 @@ info.UIDFolder.synchronizing.writingChanges=Writing local changes to server
 info.exit.closing=Closing Store {0}
 info.exit.waiting=Closing Store {0}... Waiting {1,number} seconds...
 info.exit.waiting.multiple=Waiting {0,number} seconds for {1,number} Stores to close...
+info.exit.waiting.send=Waiting {0,number} seconds to send unsent messages...
+info.exit.waiting.send.noCounter=Waiting to finish sending unsent messages...
+
 info.exitToIcon=Pooka has disconnected from you mail servers, \nbut is still running in the System Tray.  To exit \nPooka completely, use File->Exit from the toolbar or \nright-click on the Tray Icon and choose Exit Pooka.
 info.exitToIcon.title=System Tray Notification
 
