@@ -1,29 +1,22 @@
-*) deb:  if caching set to autocache, and access folder with 9000 new messages,
-should give you a chance to work with the folder instead of making you wait
-as you download everything.
-
 *) search sent folder results in 'loading' entries where the non-matching
 	to/from entries are.
+	-- test with spam.
 
-*) new usermanager:  sent folders not loading properly???
-	-- seems to be working ok?
+*) bug with focus -- in GTK+ l&f, if you open a message window and then
+close/delete it, then the focus disappears.  focus is regained if you exit
+and reselect the main window.
+	-- test in 1.6; if still there, try to fix.
+
+*) subscribe folder.  2x click on holds-messages folder (file) and it
+opens it up.
 
 *) listeners:
 	*) make sure that on disconnection that we remove all listeners.
 		*) check:  listeners on VariableBundle.
 		*) check:  listeners on KeyboardManager (IN_FOCUSED_WINDOW).
-	*) -- smtp threads, especially.
-  *) (!!) make sure that smtp threads don't exit while there is still mail to
-	be sent (!!)
-  *) test UserProfile stuff to see if we're getting rid of all of them
-	correctly.
 
 *) check release versions of libaries; make sure we have the most
 recent one of each in all areas (dist, webstart, Imported.)
-
-*) bug with focus -- in GTK+ l&f, if you open a message window and then
-close/delete it, then the focus disappears.  focus is regained if you exit
-and reselect the main window.
 
 *) encryption panel icons
 *) new icons?
@@ -38,15 +31,14 @@ and reselect the main window.
 		*) store connected/disconnected
 		*) new locks
 
-*) subscribe folder.  2x click on holds-messages folder (file) and it
-opens it up.
-
 *) fix fonts so they're no longer butt-ugly on windows
 	-- started.  check for v2.0
 
 *) test login selection on windows; make sure password field is selected.
 
 ---
+*) fix manager exit cleanup of listeners; make it a consistent API.
+
 *) new attachment display w/icons?
 
 *) look at online bugs, etc.
@@ -87,7 +79,11 @@ opens it up.
 	*) started.  need to make it reasonably nice.
 		-- only do this in 2.0?
 
+*) check out SwingWorker?
+
 *) work out webstart code for tray icon.
+
+*) new splash screen.
 
 *) change Item and ItemManager to using generics.
 
